@@ -1,5 +1,5 @@
 #!/bin/sh
-# $Id: auto.net,v 1.2 2004/12/09 08:25:48 robbat2 Exp $
+# $Id: auto.net,v 1.3 2006/05/28 04:52:22 antarus Exp $
 
 # This file must be executable to work! chmod 755!
 
@@ -22,7 +22,7 @@ opts="-fstype=nfs,hard,intr,nodev,nosuid,nonstrict"
 # Newer distributions get this right
 SHOWMOUNT="/usr/sbin/showmount --no-headers -e $key"
 
-$SHOWMOUNT | LC_ALL=C sort +0 | \
+$SHOWMOUNT | LC_ALL=C sort +k 1 | \
 	awk -v key="$key" -v opts="$opts" -- '
 	BEGIN		{ ORS=""; first=1 }
 			{ if (first) { print opts; first=0 }; print " \\\n\t" $1, key ":" $1 }
