@@ -1,0 +1,24 @@
+MD5 9efa8126decb509011646d4a4ed0779f autofs-4.1.3-bad_chdir.patch 6343
+RMD160 a406cdaa048c7b44cf93bb05df35bf2f790c6cfb autofs-4.1.3-bad_chdir.patch 6343
+SHA256 ba89a372971daa3d689366f7708ec24034c294e485a88d921fb2eac573f95b0f autofs-4.1.3-bad_chdir.patch 6343
+MD5 5d2cb735d77cd397d3de600bf3e321e6 autofs-4.1.3-miscfixes.patch.gz 3058
+RMD160 ad3d831ac3dd60eba633f976bf0cd38c4f05c6a6 autofs-4.1.3-miscfixes.patch.gz 3058
+SHA256 630f9ee90d23b02ffaa5fe379c4f1bca7db61b8f24f9cd5a2764a0c99a7eddfc autofs-4.1.3-miscfixes.patch.gz 3058
+MD5 f2e7950dab204719162be84b63857abc autofs-4.1.3-mtab_lock.patch 551
+RMD160 f34aeb1e29d8ddc06259c51fcc1bccd48e2b7efc autofs-4.1.3-mtab_lock.patch 551
+SHA256 13494713f698c29281bc5d27a7b4b2dbb7692b6d18f770fada71ab3b28c33fca autofs-4.1.3-mtab_lock.patch 551
+MD5 e404ec690f3ef118ade6f0e605228258 autofs-4.1.3-non_block_ping.patch 7934
+RMD160 6df2da01f032d8d33ef56db62964b68e14b16ca8 autofs-4.1.3-non_block_ping.patch 7934
+SHA256 882a8ddb30b30232bed1afe9b891721ebbaec54c7122e625df3382e6099e8460 autofs-4.1.3-non_block_ping.patch 7934
+MD5 bc536e7fe6e3c79f9b66a4254bf0ad43 autofs-4.1.3-replicated_server_select.patch 962
+RMD160 52f13fed9e443e0810d3e29408b06e797344e8c1 autofs-4.1.3-replicated_server_select.patch 962
+SHA256 95e2f7d1ca19c67b8116a8d5f382a7bb116255fbd507dc6689faea7da9a67dad autofs-4.1.3-replicated_server_select.patch 962
+MD5 14681387a1fc5229c2c73f593334071b autofs-4.1.3-sock-leak-fix.patch 1236
+RMD160 09ca250b5711d04336f61fb7a227d99ae2b4d053 autofs-4.1.3-sock-leak-fix.patch 1236
+SHA256 6aaa548688e7d48eb735dfa9acb1c097b82f8ef68a3ca30aab70a92b9b36453b autofs-4.1.3-sock-leak-fix.patch 1236
+MD5 d408ddcd5dafca8d2907b788f93b225c autofs-4.1.3-strict.patch 1626
+RMD160 8527db5b40eb7d0bf7fcc6f47a5be5beb22905d3 autofs-4.1.3-strict.patch 1626
+SHA256 518a7930cb6bad18f045dfc493ce39816e6fbce0f80c444dd75a33d722a8caff autofs-4.1.3-strict.patch 1626
+MD5 f43a09e94c4bd512ec58ac06e9d42c60 autofs-4.1.3.tar.bz2 125234
+RMD160 7df2839fce00222609bd7977a9d6275276e232b4 autofs-4.1.3.tar.bz2 125234
+SHA256 9257a603815ee8c8d0f2935ff3c254b23f8007eee5fa8c9bf2e3661fdc171035 autofs-4.1.3.tar.bz2 125234
